@@ -224,8 +224,12 @@
       \item \code{plogis(x, lower=FALSE, log.p=TRUE)} no longer
       underflows early for large x (e.g. x=800).
 
-      \item X11-based pixmap devices like \code{png(type="Xlib")} were trying 
+      \item X11-based pixmap devices like \code{png(type="Xlib")} were trying
       to set the cursor style, which triggered some warnings and hangs.
+
+      \item \code{?Arithmetic}'s \dQuote{\code{1 ^ y} and \code{y ^ 0}
+	are \code{1}, \emph{always}} now also applies for \code{integer}
+      values.
     }
   }
 }
